test/checker/pass/check_named_type.ms
const MyInt := Nat;
const x: MyInt := 42;
