test/checker/fail/check_type_mismatch.ms
const x := 1 + true
